servicio de preguntas y respuestas

--- a/src/app/extraspages/steps/steps.component.html
+++ b/src/app/extraspages/steps/steps.component.html
@@ -24,7 +24,7 @@
                             <p class="text-muted mb-4 fs-3">Paso 3: Resultado de pertenencia.</p>
                             <p class="text-muted mb-4 fs-3">Paso 4: Crea compromisos y obligaciones.</p>
                             <p class="text-muted mb-4 fs-3">Paso 5: Vincula y gestiona tus obligaciones.</p>
-                            <a routerLink="/projects/step1" class="btn btn-danger"><!--<i class="mdi mdi-home me-1"></i>-->Comenzar</a>
+                            <a routerLink="/projects/{{project_id}}/step" class="btn btn-danger"><!--<i class="mdi mdi-home me-1"></i>-->Comenzar</a>
                         </div>
                     </div>
                 </div><!-- end col -->
