--- a/src/app/pages/projects/create/step1/step1.component.html
+++ b/src/app/pages/projects/create/step1/step1.component.html
@@ -15,9 +15,9 @@
                         <div class="mb-3 mb-lg-0">
                             <label for="choices-priority-input" class="form-label">Región</label>
                             <select class="form-select" placeholder="Selecciona región" data-choices data-choices-search-false
-                                id="choices-priority-input" formControlName="regionId">
+                                id="choices-priority-input" formControlName="regionId" (change)="getComunes($event.target)">
                                 <option value="">Selecciona región</option>
-                                <option *ngFor="let r of regions;" value="{{r.id}}" (click)="getComunes(r.id)">{{r.nombre_region}}</option>
+                                <option *ngFor="let r of regions;" value="{{r.id}}">{{r.nombre_region}}</option>
                             </select>
                         </div>
                     </div>
@@ -37,10 +37,9 @@
                         <div class="mb-3 mb-lg-0">
                             <label for="choices-priority-input" class="form-label">Tipo de zona</label>
                             <select class="form-select" placeholder="Selecciona tipo de zona" data-choices data-choices-search-false
-                                id="choices-priority-input3" formControlName="zonaId">
+                                id="choices-priority-input3" formControlName="tipoZonaId">
                                 <option value="">Selecciona tipo de zona</option>
-                                <option value="1">Rural</option>
-                                <option value="2">Urbana</option>
+                                <option *ngFor="let z of zones;" value="{{z.id}}">{{z.nombre_zona}}</option>
                             </select>
                         </div>
                     </div>
@@ -50,7 +49,7 @@
         </div>
     </div>
     <div class="col-lg-8" *ngIf="step == 2">
-        <h4 style="text-align: center;">Define el sector productivo</h4>
+        <h4 style="text-align: center;">{{pregunta.pregunta}}</h4>
         <div class="card">
             <div class="card-body">
                 <div class="row">
@@ -60,9 +59,7 @@
                             <select class="form-select" placeholder="Selecciona sector productivo" data-choices data-choices-search-false
                                 id="choices-priority-input">
                                 <option value="">Selecciona sector productivo</option>
-                                <option value="High">High</option>
-                                <option value="Medium">Medium</option>
-                                <option value="Low">Low</option>
+                                <option *ngFor="let res of respuestas;" value="{{res.id}}">{{res.respuesta}}</option>
                             </select>
                         </div>
                     </div>
@@ -72,7 +69,7 @@
     </div>
     
     <div class="col-lg-8" *ngIf="step == 3">
-        <h4 style="text-align: center;">Especifica el tipo de actividad</h4>
+        <h4 style="text-align: center;">{{pregunta.pregunta}}</h4>
         <div class="card">
             <div class="card-body">
                 <div class="row">
@@ -82,9 +79,7 @@
                             <select class="form-select" placeholder="Selecciona actividad" data-choices data-choices-search-false
                                 id="choices-priority-input">
                                 <option value="">Selecciona actividad</option>
-                                <option value="High">High</option>
-                                <option value="Medium">Medium</option>
-                                <option value="Low">Low</option>
+                                <option *ngFor="let res of respuestas;" value="{{res.id}}">{{res.respuesta}}</option>
                             </select>
                         </div>
                     </div>
@@ -95,9 +90,25 @@
     
     <div class="col-lg-8" *ngIf="step == 4">
         <h4 style="text-align: center;">Variables Generales</h4>
-        <h5 style="text-align: center;">Selecciona el tipo de obligación legal de interes</h5>
+        <h5 style="text-align: center;">{{pregunta.pregunta}}</h5>
         <div class="row justify-content-center">
-        <div class="col-lg-4">
+            <ng-container *ngFor="let res of respuestas;">
+                <div class="col-lg-4">
+                    <div class="card border" style="background: #fef2df;">
+                        <div class="card-body" style="text-align: center;">
+                            <b>{{res.respuesta}}</b>
+                        </div>
+                    </div>
+                    
+                    <div class="card border" *ngIf="res.descripcion">
+                        <div class="card-body">
+                            <h5>Descripción</h5>
+                            {{res.descripcion}}
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
+        <!--<div class="col-lg-4">
             <div class="card border" style="background: #fef2df;">
                 <div class="card-body" style="text-align: center;">
                     <b>OBLIGACIONES HABILITANTES</b>
@@ -132,15 +143,30 @@
                 </div>
             </div>
             
-        </div>
+        </div>-->
         </div>
     </div>
 
     <div class="col-lg-10" *ngIf="step == 5">
         <h4 style="text-align: center;">Variables Generales</h4>
-        <h5 style="text-align: center;">Selecciona el ambito o los ambitos legales a evaluar</h5>
+        <h5 style="text-align: center;">{{pregunta.pregunta}}</h5>
         <div class="row justify-content-center">
-        <div class="col-lg-3">
+            
+            <ng-container *ngFor="let res of respuestas;">
+                <div class="col-lg-3" *ngIf="res.respuesta != 'MEDIO AMBIENTE' && res.respuesta != 'SEGURIDAD Y SALUD LABORAL' && res.respuesta != 'LABORAL' && res.respuesta != 'EFICIENCIA ENERGETICA'">
+                    <div class="card border" style="background: #d1eeea;">
+                        <div class="card-body" style="text-align: center;">
+                            <div style="background-color: #d7e8d8;width: 40px;height: 40px; border: 1px solid #d7e8d8;border-radius: 24px;margin: auto;">
+                                <i class="ri-plant-fill" style="font-size: 24px;color: #4a9d4b;"></i>
+                            </div>
+                            <p style="margin-top: 10px;"><b>{{res.respuesta}}</b></p>
+                            <p>{{res.descripcion}}</p>
+                            
+                        </div>
+                    </div>
+                    
+                </div>     
+        <div class="col-lg-3" *ngIf="res.respuesta == 'MEDIO AMBIENTE'">
             <div class="card border" style="background: #d1eeea;">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #d7e8d8;width: 40px;height: 40px; border: 1px solid #d7e8d8;border-radius: 24px;margin: auto;">
@@ -153,7 +179,7 @@
             </div>
             
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3" *ngIf="res.respuesta == 'SEGURIDAD Y SALUD LABORAL'">
             <div class="card border" style="background: #faeedc;">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #f4d890;width: 40px;height: 40px; border: 1px solid #f4d890;border-radius: 24px;margin: auto;">
@@ -165,7 +191,7 @@
             </div>
         </div>
 
-        <div class="col-lg-3">
+        <div class="col-lg-3" *ngIf="res.respuesta == 'LABORAL'">
             <div class="card border" style="background: #fae1dc;">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #ebbdb4;width: 40px;height: 40px; border: 1px solid #ebbdb4;border-radius: 24px;margin: auto;">
@@ -178,7 +204,7 @@
         </div>
         
 
-        <div class="col-lg-3">
+        <div class="col-lg-3" *ngIf="res.respuesta == 'EFICIENCIA ENERGETICA'">
             <div class="card border" style="background: #b3ebf6;">
                 <div class="card-body" style="text-align: center;">
                     <div style="background-color: #8de1f2;width: 40px;height: 40px; border: 1px solid #8de1f2;border-radius: 24px;margin: auto;">
@@ -189,13 +215,25 @@
                 </div>
             </div>
         </div>
+        </ng-container>
         </div>
     </div>
 
     <div class="col-lg-8" *ngIf="step == 6">
         <h4 style="text-align: center;">Variables Generales</h4>
-        <h5 style="text-align: center;">Selecciona la fase del proyecto</h5>
+        <h5 style="text-align: center;">{{pregunta.pregunta}}</h5>
         <div class="row justify-content-center">
+            
+        <ng-container *ngFor="let res of respuestas;">
+        <div class="col-lg-4">
+                <div class="card border" style="background: #fef2df;">
+                    <div class="card-body" style="text-align: center;">
+                        <b>{{res.respuesta}}</b>
+                    </div>
+                </div>
+                
+        </div>
+        <!--
         <div class="col-lg-4">
             <div class="card border" style="background: #fef2df;">
                 <div class="card-body" style="text-align: center;">
@@ -219,14 +257,27 @@
                 </div>
             </div>
             
-        </div>
+        </div>-->
+        </ng-container>
         </div>
     </div>
 
     <div class="col-lg-8" *ngIf="step == 7">
         <h4 style="text-align: center;">Variables Específicas</h4>
-        <h5 style="text-align: center;">Seleccione la categoría de obligaciones</h5>
+        <h5 style="text-align: center;">{{pregunta.pregunta}}</h5>
         <div class="row justify-content-center">
+        
+            <ng-container *ngFor="let res of respuestas;">    
+            <div class="col-lg-4">
+                <div class="card border">
+                    <div class="card-body" style="text-align: center;">
+                        <b>{{res.respuesta}}</b>
+                    </div>
+                </div>
+                
+            </div>
+            </ng-container>
+        <!--    
         <div class="col-lg-4">
             <div class="card border">
                 <div class="card-body" style="text-align: center;">
@@ -277,7 +328,7 @@
                 </div>
             </div>
             
-        </div>
+        </div>-->
         </div>
     </div>
 
