--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -65,7 +65,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="d-flex mb-2" routerLink="/pages/steps" style="cursor: pointer;">
+                  <div class="d-flex mb-2" routerLink="/pages/{{data.id}}/steps" style="cursor: pointer;">
                       <!--<div class="flex-shrink-0 me-3">
                           <div class="avatar-sm">
                               <span class="avatar-title bg-soft-warning rounded p-2">
