--- a/src/app/account/auth/success-msg/password/password.component.html
+++ b/src/app/account/auth/success-msg/password/password.component.html
@@ -21,7 +21,7 @@
                               <img src="assets/images/logo-light2.png" alt="" height="20">
                           </a>
                       </div>
-                      <p class="mt-3 fs-15 fw-medium">Cumplimiento legal de tu empresa a un click</p>
+                      <p class="mt-3 fs-15 fw-medium">Potenciando tu gestión en sostenibilidad</p>
                   </div>
               </div>
           </div>
