--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -10,6 +10,15 @@
       </div>
   </div>
 
+  <!--preloader-->
+  <div id="preloader" style="opacity: 0px !important;background-color: #000 !important;visibility: hidden;">
+    <div id="status">
+      <div class="spinner-border text-primary avatar-sm" role="status">
+          <span class="visually-hidden">Cargando...</span>
+      </div>
+    </div>
+  </div>
+
   <!-- auth page content -->
   <div class="auth-page-content">
       <div class="container">
@@ -21,7 +30,7 @@
                               <img src="assets/images/logo-light2.png" alt="" height="20">
                           </a>
                       </div>
-                      <p class="mt-3 fs-15 fw-medium">Cumplimiento legal de tu empresa a un click</p>
+                      <p class="mt-3 fs-15 fw-medium">Potenciando tu gestión en sostenibilidad</p>
                   </div>
               </div>
           </div>
