--- a/src/app/extraspages/steps/steps.component.html
+++ b/src/app/extraspages/steps/steps.component.html
@@ -20,10 +20,10 @@
                         <!--<img src="assets/images/error400-cover.png" alt="error img" class="img-fluid">-->
                         <div class="mt-3">
                             <p class="text-muted mb-4 fs-3">Paso 1: Define las variables generales de tu proyecto</p>
-                            <p class="text-muted mb-4 fs-3">Paso 2: Define los parametros.</p>
-                            <p class="text-muted mb-4 fs-3">Paso 3: Resultado de pertenencia.</p>
-                            <p class="text-muted mb-4 fs-3">Paso 4: Crea compromisos y obligaciones.</p>
-                            <p class="text-muted mb-4 fs-3">Paso 5: Vincula y gestiona tus obligaciones.</p>
+                            <p class="text-muted mb-4 fs-3">Paso 2: Define las variables especificas de tu proyecto.</p>
+                            <p class="text-muted mb-4 fs-3">Paso 3: Configura tu organización y procesos.</p>
+                            <p class="text-muted mb-4 fs-3">Paso 4: Conecta la normativa a tus procesos.</p>
+                            <p class="text-muted mb-4 fs-3">Paso 5: Sorpréndete con el resultado.</p>
                             <a routerLink="/projects/{{project_id}}/step" class="btn btn-danger"><!--<i class="mdi mdi-home me-1"></i>-->Comenzar</a>
                         </div>
                     </div>
