--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -1,6 +1,16 @@
 <!-- Start Breadcrumbs -->
 <app-breadcrumbs title="Crear Proyecto" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <!-- End Breadcrumbs -->
+
+  <!--preloader-->
+  <div id="preloader" style="opacity: 0px !important;background-color: #000 !important;visibility: hidden;">
+    <div id="status">
+      <div class="spinner-border text-primary avatar-sm" role="status">
+          <span class="visually-hidden">Cargando...</span>
+      </div>
+    </div>
+  </div>
+  
 <ng-container *ngIf="!typeCreate">
 <!-- Vertical alignment (align-items-center) -->
 <div class="row justify-content-center" style="padding-top: 10%;">
@@ -13,6 +23,10 @@
                     <label class="form-label" for="project-title-input">Nombre de Proyecto</label>
                     <input type="text" class="form-control" id="project-title-input"
                         placeholder="Escribe nombre de Proyecto" formControlName="nombre">
+                        
+                    <label class="form-label" style="margin-top: 20px !important;" for="project-title-input">Descripción del Proyecto</label>
+                    <input type="text" class="form-control" id="project-title-input"
+                        placeholder="Escribe descripción del Proyecto" formControlName="descripcion">
                     </form>
                 </div>
             </div>
