--- a/src/app/extraspages/steps/steps.component.html
+++ b/src/app/extraspages/steps/steps.component.html
@@ -9,7 +9,8 @@
                     <div class="text-center">
                         <!--<img src="assets/images/error400-cover.png" alt="error img" class="img-fluid">-->
                         <div class="mt-3">
-                            <h3 class="text-uppercase">Conect-<span class="text-danger">IA</span></h3>
+                            <!--<h3 class="text-uppercase">Conect-<span class="text-primary">IA</span></h3>-->
+                            <img src="assets/images/logo-dark2.png" alt="" height="100" width="250">
                         </div>
                     </div>
                 </div><!-- end col -->
