--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -47,12 +47,17 @@
         
         <ng-container *ngFor="let t of types;let impar=odd;">
         <div class="col-xxl-5">
-            <div class="card border card-border-dark" style="border-color: #767676 !important;">
-                <div class="card-header" style="background-color: #dce0e4 !important;">
+            <div class="card border card-border-dark" style="border-color: #767676 !important;min-height: 250px;">
+                <div class="card-header" style="background-color: #dce0e4 !important;min-height: 70px;">
                     <h6 class="card-title mb-0">{{t.nombre}}</h6>
                 </div>
                 <div class="card-body">
                     <p class="card-text">{{t.descripcion}}</p>
+                    <!--<div class="text-end">
+                        <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" (click)="saveProject(t.id)">Iniciar</button>
+                    </div>-->
+                </div>
+                <div class="card-footer" style="border-top: 0px;">
                     <div class="text-end">
                         <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" (click)="saveProject(t.id)">Iniciar</button>
                     </div>
