ajuste info proyecto

--- a/src/app/pages/dashboards/project-anality/project-anality.component.html
+++ b/src/app/pages/dashboards/project-anality/project-anality.component.html
@@ -1,5 +1,5 @@
 <!-- Start Breadcrumbs -->
-<app-breadcrumbs title="Proyecto Analisis" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
+<app-breadcrumbs title="Paso 3: Analisis - {{project.nombre}}" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <!-- End Breadcrumbs -->
 
  <div class="row project-wrapper">
