--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -90,7 +90,7 @@
                   <div class="mt-auto">
                       <div class="d-flex mb-2">
                           <div class="flex-grow-1">
-                              <div>Creado por: Jhoan Zerpa</div>
+                              <!--<div>Creado por: Jhoan Zerpa</div>-->
                           </div>
                       </div>
                   </div>
