--- a/src/app/pages/dashboards/project-anality/project-anality.component.html
+++ b/src/app/pages/dashboards/project-anality/project-anality.component.html
@@ -10,7 +10,7 @@
                 <div class="card">
                     <div class="row margin-card">
                         <div class="col-lg-3">
-                        <button type="button" class="btn btn-primary">Configurar Instalaciones y Procesos</button>
+                        <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/installations">Configurar Instalaciones y Procesos</button>
                         </div>
                         
                         <div class="col-lg-3">
