--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -317,7 +317,8 @@
                         <i class='bx bx-sun fs-22' (click)="changeMode('light')"></i>
                     </button>
                 </div>
-
+                
+                <!--Comentado por JZ
                 <div class="dropdown topbar-head-dropdown ms-1 header-item" ngbDropdown>
                     <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                         id="page-header-notifications-dropdown" data-bs-toggle="dropdown" aria-haspopup="true"
@@ -651,7 +652,7 @@
 
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="dropdown ms-sm-3 header-item topbar-user" ngbDropdown>
                     <button type="button" class="btn" id="page-header-user-dropdown" data-bs-toggle="dropdown"
@@ -674,7 +675,7 @@
                         <button class="dropdown-item" (click)="irPerfil()"><i
                                 class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Perfil</span></button>
-                        <a class="dropdown-item" routerLink="/apps/chat"><i
+                        <!--<a class="dropdown-item" routerLink="/apps/chat"><i
                                 class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Mensajes</span></a>
                         <a class="dropdown-item" routerLink="/tasks/kanban"><i
@@ -682,16 +683,16 @@
                                 class="align-middle">Tareas</span></a>
                         <a class="dropdown-item" routerLink="/pages/faqs"><i
                                 class="mdi mdi-lifebuoy text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Ayuda</span></a>
+                                class="align-middle">Ayuda</span></a>-->
                         <div class="dropdown-divider"></div>
                         <!--<a class="dropdown-item" routerLink="/pages/profile"><i
                                 class="mdi mdi-wallet text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Balance : <b>$5971.67</b></span></a>-->
-                        <a class="dropdown-item" routerLink="/pages/profile"><span
+                                class="align-middle">Balance : <b>$5971.67</b></span></a>
+                                <a class="dropdown-item" routerLink="/pages/profile"><span
                                 class="badge bg-soft-success text-success mt-1 float-end">Nuevo</span><i
                                 class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Configuración</span></a>
-                                <!--<a class="dropdown-item" routerLink="/auth/lockscreen/basic"><i
+                                <a class="dropdown-item" routerLink="/auth/lockscreen/basic"><i
                                 class="mdi mdi-lock text-muted fs-16 align-middle me-1"></i> <span
                                 class="align-middle">Lock screen</span></a>-->
                         <a class="dropdown-item" href="javascript: void(0);" (click)="logout()"><i
