--- a/src/app/pages/dashboards/project-anality/project-anality.component.html
+++ b/src/app/pages/dashboards/project-anality/project-anality.component.html
@@ -14,7 +14,7 @@
                         </div>
                         
                         <div class="col-lg-3">
-                            <button type="button" class="btn btn-primary">Conectar Normativas a procesos</button>
+                            <button type="button" class="btn btn-primary" routerLink="/projects/{{project_id}}/type">Conectar Normativas a procesos</button>
                         </div>
                     </div>
                 </div>
