--- a/src/app/pages/projects/create/type/body-legal/body-legal.component.html
+++ b/src/app/pages/projects/create/type/body-legal/body-legal.component.html
@@ -77,8 +77,7 @@
                                         
                                         <div class="d-flex gap-2">
                                             <div class="edit">
-                                                <button class="btn btn-sm btn-success edit-item-btn"
-                                                    data-bs-toggle="modal" data-bs-target="#showModal"
+                                                <button class="btn btn-sm btn-success edit-item-btn" routerLink="/projects/{{project_id}}/type/bodylegal/{{data.id}}/Detail"
                                                     >Conectar</button>
                                             </div>
                                         </div>
